--- a/src/assets/stylesheets/login.scss
+++ b/src/assets/stylesheets/login.scss
@@ -1,15 +1,7 @@
-html,
-body {
+.container {
     height: 100%;
     text-align: center;
 }
-
-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .form-signin {
     width: 100%;
     max-width: 330px;
